--- a/最終課題/index.html
+++ b/最終課題/index.html
@@ -140,8 +140,10 @@
            </div> 
     </div> 
                   
-<div class="scrolltop"><a href="#top">
+<div class="scrolltop">
+   <a href="#top">
     <img src="images/pagetop.png" alt="" width="">
-</a></div>             
+    </a>
+</div>             
 </body>
 </html>
